--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -350,10 +350,10 @@
 
         <!-- Video Area -->
         <div class="col-12 col-lg-6">
-          <div class="dento-video-area mb-100">
+          <div class="dento-video-area mb-100 embed-responsive embed-responsive-16by9">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/2rOKmclX0zw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <!-- Play Button -->
-     
+
           </div>
         </div>
       </div>
